log/build_2023-10-10_11-47-11/loki_base/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base/Py_Base_State.py", line 6
    PyBaseState.drive_mode = drive_mode[]
                                        ^
SyntaxError: invalid syntax

